feat: add description for work

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="expiriens-right-block">
                   <div class="content-expiriens-profession">Frontend-разработчик</div>
                   <div class="content-expiriens-tasks">
-                    React, AntDesign, Typescript, Redux, Tailwind, Next, Chakra. Создание новых модулей в проектах,
+                    React, AntDesign, Typescript, Redux, Tailwind, Next, Chakra, SWR. Создание новых модулей в проектах,
                     оптимизация и рефакторинг старого кода.
                   </div>
                 </div>
@@ -300,7 +300,7 @@
     </main>
     <div class="portfolio" id="portfolio">
       <section>
-        <h3 class="portfolio-title">Последние рабочие проекты</h3>
+        <h3 class="portfolio-title">Последние рабочие проекты (2023-2025)</h3>
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <div class="portfolio-nda">
@@ -342,6 +342,22 @@
             </div>
             <div class="portfolio-description">
               <em>Фин-тех, Next, css-module, typescript </em>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <div class="portfolio-description">
+              <div class="portfolio-nda-title">На этом месте работы за 1,5 года я выполняла следующие задачи:</div>
+              <ul class="portfolio-nda-list">
+                <li>Меняла дизайн приложения</li>
+                <li>Обновляла библиотеки</li>
+                <li>Писала темную тему</li>
+                <li>Делала адаптив</li>
+                <li>Рефакторила</li>
+                <li>Меняли архитектуру проекта</li>
+                <li>Добавляла новые страницы</li>
+                <li>Решала баги</li>
+                <li>Избавлялась от красных ошибок в консоль логах</li>
+              </ul>
             </div>
           </li>
         </ul>
@@ -842,10 +858,12 @@
                     <span><strong>Место работы:</strong></span>
                   </div>
                   <ol>
-                    <li>2023 – 2025 - Фин-тех, frontend-developer</li>
+                    <li>2023 – 2025 - Фин-тех, frontend-developer (Разработка новых модулей приложения, рефакторинг
+                      старых модулей.
+                      Стек - react, typescript, ant-design, redux, tailwind, chakra, next, swr)</li>
                     <li>
                       2022 – Стриминговый сервис, frontend-developer (Работа в экосистеме React.js. Создание
-                      новых компонент в проекте, оптимизация и рефакторинг чужого старого кода, настройка используемых
+                      новых компонентов в проекте, оптимизация и рефакторинг чужого старого кода, настройка используемых
                       внешних библиотек под особенности проекта.)
                     </li>
                     <li>2021 – смена направления работы на js / frontend / react, обучение на курсах</li>
@@ -895,19 +913,19 @@
                     <tr>
                       <td>Фреймворки:</td>
                       <td>
-                        <span><strong>(Vue3.js)</strong></span>
+                        <span><strong>Next.js, (Vue3.js)</strong></span>
                       </td>
                     </tr>
                     <tr>
                       <td>Дизайн-системы:</td>
                       <td>
-                        <span><strong>AntDesign, Mui</strong></span>
+                        <span><strong>AntDesign, Chakra, Mui</strong></span>
                       </td>
                     </tr>
                     <tr>
                       <td>Технологии:</td>
                       <td>
-                        <span><strong>Git, Webpack, Redux, RTK Query</strong></span>
+                        <span><strong>Git, Webpack, Redux, RTK Query, SWR</strong></span>
                       </td>
                     </tr>
                     <tr>
