fix: fix error at text

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="expiriens-right-block">
                   <div class="content-expiriens-profession">Frontend-разработчик</div>
                   <div class="content-expiriens-tasks">
-                    Работа в экосистеме React.js. Создание новых компонент в проекте, оптимизация и рефакторинг чужого
+                    Работа в экосистеме React.js. Создание новых компонентов в проекте, оптимизация и рефакторинг чужого
                     старого кода, адаптация используемых внешних библиотек под особенности проекта.
                   </div>
                 </div>
