feat: add name company

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="expiriens-left-block">
                   <div class="content-expiriens-date">2022</div>
                   <div class="content-expiriens-company">
-                    Стриминговый<br />
+                    Happy Fans, Стриминговый<br />
                     сервис
                   </div>
                 </div>
@@ -862,7 +862,7 @@
                       старых модулей.
                       Стек - react, typescript, ant-design, redux, tailwind, chakra, next, swr)</li>
                     <li>
-                      2022 – Стриминговый сервис, frontend-developer (Работа в экосистеме React.js. Создание
+                      2022 – Happy Fans, Стриминговый сервис, frontend-developer (Работа в экосистеме React.js. Создание
                       новых компонентов в проекте, оптимизация и рефакторинг чужого старого кода, настройка используемых
                       внешних библиотек под особенности проекта.)
                     </li>
