feat: add title last company

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <li class="content-expiriens-item expiriens-wrapper">
                 <div class="expiriens-left-block">
                   <div class="content-expiriens-date">2023-2025</div>
-                  <div class="content-expiriens-company">Фин.тех</div>
+                  <div class="content-expiriens-company">Paykong, Фин.тех</div>
                 </div>
                 <div class="expiriens-right-block">
                   <div class="content-expiriens-profession">Frontend-разработчик</div>
@@ -858,7 +858,7 @@
                     <span><strong>Место работы:</strong></span>
                   </div>
                   <ol>
-                    <li>2023 – 2025 - Фин-тех, frontend-developer (Разработка новых модулей приложения, рефакторинг
+                    <li>2023 – 2025 - Paykong, Фин-тех, frontend-developer (Разработка новых модулей приложения, рефакторинг
                       старых модулей.
                       Стек - react, typescript, ant-design, redux, tailwind, chakra, next, swr)</li>
                     <li>
