--- a/index.html
+++ b/index.html
@@ -135,21 +135,6 @@
                   <div class="content-education-place">RS-School</div>
                 </li>
                 <li class="content-education-item">
-                  <div class="content-education-date">2022</div>
-                  <div class="content-education-title">Frontend-Developer</div>
-                  <div class="content-education-place">RS-School</div>
-                </li>
-                <li class="content-education-item">
-                  <div class="content-education-date">2014</div>
-                  <div class="content-education-title">Javascript</div>
-                  <div class="content-education-place">EPIC SKILLS, Санкт-Петербург</div>
-                </li>
-                <li class="content-education-item">
-                  <div class="content-education-date">2014</div>
-                  <div class="content-education-title">PHP</div>
-                  <div class="content-education-place">EPIC SKILLS, Санкт-Петербург</div>
-                </li>
-                <li class="content-education-item">
                   <div class="content-education-date">2013</div>
                   <div class="content-education-title">Компьютерный веб-дизайн</div>
                   <div class="content-education-place">РГТЭУ</div>
@@ -212,19 +197,6 @@
               </li>
               <li class="content-expiriens-item expiriens-wrapper">
                 <div class="expiriens-left-block">
-                  <div class="content-expiriens-date">2019-2020</div>
-                  <div class="content-expiriens-company">Freelance</div>
-                </div>
-                <div class="expiriens-right-block">
-                  <div class="content-expiriens-profession">Веб-разработчик</div>
-                  <div class="content-expiriens-tasks">
-                    Создание и поддержка сайтов. Адаптивная верстка. Bootstrap. Pixel perfect. Git. Responsive.
-                    Кроссбраузерная верстка.
-                  </div>
-                </div>
-              </li>
-              <li class="content-expiriens-item expiriens-wrapper">
-                <div class="expiriens-left-block">
                   <div class="content-expiriens-date">2016-2019</div>
                   <div class="content-expiriens-company"></div>
                 </div>
@@ -239,9 +211,9 @@
                   <div class="content-expiriens-company">группа ВТБ</div>
                 </div>
                 <div class="expiriens-right-block">
-                  <div class="content-expiriens-profession">Html-верстальщик</div>
+                  <div class="content-expiriens-profession">Frontend-разработчик</div>
                   <div class="content-expiriens-tasks">
-                    Вёрстка страниц корпоративного сайта и верстка email-рассылок.
+                    Создание страниц корпоративного сайта и верстка email-рассылок.
                   </div>
                 </div>
               </li>
@@ -840,14 +812,9 @@
                   <ol>
                     <li>КемГУ, факультет: физики, кафедра атомной и ядерной физики</li>
                     <li>
-                      2013 г. повышение квалификации в филиале «Российского государственного торгово-экономического
+                      2013 г. курсы в филиале «Российского государственного торгово-экономического
                       университета» по программе «Web дизайнер».
                     </li>
-                    <li>
-                      2014 г. Санкт-Петербург, школа Epic Skills, курсы и вебинары: Bootstrap, Jquery, PHP,
-                      Javascript.
-                    </li>
-                    <li>2022 г. RS-school, курс JavaScript/Frontend Developer</li>
                     <li>2024 г. RS-school, курс Node/Backend Developer</li>
                   </ol>
                 </div>
@@ -866,19 +833,12 @@
                       новых компонентов в проекте, оптимизация и рефакторинг чужого старого кода, настройка используемых
                       внешних библиотек под особенности проекта.)
                     </li>
-                    <li>2021 – смена направления работы на js / frontend / react, обучение на курсах</li>
                     <li>
-                      2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная верстка. Bootstrap.
-                      Pixel perfect. Git. Responsive. Кроссбраузерная верстка.)
-                    </li>
-                    <li>2016 – 2019 - декрет</li>
-                    <li>
-                      2015 – 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц корпоративного сайта и верстка
+                      2015 – 2016 - группа ВТБ, frontend-developer (Создание страниц корпоративного сайта и верстка
                       email-рассылок.)
                     </li>
-                    <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
                     <li>
-                      2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms opencart, cms
+                      2014 – 2015 Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms opencart, cms
                       wordpress, cms modx.)
                     </li>
                     <li>2014 – Fingli, веб-студия, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
@@ -913,7 +873,7 @@
                     <tr>
                       <td>Фреймворки:</td>
                       <td>
-                        <span><strong>Next.js, (Vue3.js)</strong></span>
+                        <span><strong>Next.js</strong></span>
                       </td>
                     </tr>
                     <tr>
